--- a/src/app/features/chats/pages/chat-home/chat-home.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-home.component.html
@@ -6,7 +6,9 @@
       @for (conversation of conversations; track
       conversation.conversation[0]._id) {
 
-      <div class="janeladeconversa hover:bg-gray-200">
+      <div 
+      (click)="selectConversation(conversation)"
+      class="janeladeconversa hover:bg-gray-200">
         <div class="avatarconversa">
           <img
             src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
