--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
@@ -1,5 +1,6 @@
 <header class="menu">
 
+  @if(isSelected()) {
     <div class="avatar">
       <div class="avatarusuario">
         <img
@@ -12,12 +13,12 @@
     <ul class="opcoes">
       <li><i class="bx bx-dots-vertical-rounded"></i></li>
     </ul>
-  
+  }
 
 </header>
 
 <section class="corpo_conversa">
- 
+  @if (isSelected()) {
     <div class="mensagem_usuario outrem">
       <p>Hi bro.<span>12:00</span></p>
     </div>
@@ -25,14 +26,17 @@
     <div class="mensagem_usuario proprio">
       <p>Yhhh<span>22:40</span></p>
     </div>
- 
+  }
+
 
 </section>
 
 <section class="input_conversa flex items-center justify-center">
 
+  @if (isSelected()) {
     <i class="bx bx-smile text-[2rem] cursor-pointer"></i>
     <input type="text" placeholder="Type a message" />
     <i class="bx bxs-send text-[2rem] cursor-pointer"></i>
+  }
 
 </section>
