feat(chat): chat input text logging done

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-input-box/chat-input-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-input-box/chat-input-box.component.html
@@ -1,7 +1,16 @@
-<section class="input_conversa flex items-center justify-center">
-  <i class="bx bx-smile text-[2rem] cursor-pointer"></i>
-  <input type="text" placeholder="Type a message" />
-  <i
-    class="bx bxs-send text-[2rem] cursor-pointer p-1.5 hover:rounded-full hover:bg-gray-200"
-  ></i>
-</section>
+<form (ngSubmit)="sendMessage()" class="input_conversa flex items-center justify-center">
+    
+        <i class="bx bx-smile text-[2rem] cursor-pointer"></i>
+        <input
+        [(ngModel)]="textInput"
+        name="text-input"
+        type="text" placeholder="Type a message" />
+        <button type="submit">
+            <i
+              class="bx bxs-send text-[2rem] cursor-pointer p-1.5 hover:rounded-full hover:bg-gray-200"
+            ></i>
+
+        </button>
+
+    
+</form>
