--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
@@ -23,13 +23,16 @@
 
 <section class="corpo_conversa">
   @if (isSelected()) {
-  <div class="mensagem_usuario outrem">
-    <p>Hi bro.<span>12:00</span></p>
-  </div>
+    <div>
+      <div class="mensagem_usuario outrem">
+        <p>Hi bro.<span>12:00</span></p>
+      </div>
+    
+      <div class="mensagem_usuario proprio">
+        <p>Yhhh<span>22:40</span></p>
+      </div>
 
-  <div class="mensagem_usuario proprio">
-    <p>Yhhh<span>22:40</span></p>
-  </div>
+    </div>
   }
 </section>
 
