feat(chat): chat boxed implemented

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
@@ -1,1 +1,9 @@
-<p>chat-body works!</p>
+<div>
+    <div class="message-box receive">
+        <p>Hi bro.<span>12:00</span></p>
+      </div>
+    
+      <div class="message-box sent">
+        <p>Yhhh<span>22:40</span></p>
+      </div>
+</div>
