feat(chat): chat receive part done

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="message-box receive">
+    <div class="message-box" app-msg-receive-box>
         <p>Hi bro.<span>12:00</span></p>
       </div>
     
