feat(chat); message send boxy styled

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
@@ -1,9 +1,5 @@
 <div>
-    <div class="message-box" app-msg-receive-box>
-        <p>Hi bro.<span>12:00</span></p>
-      </div>
+    <div app-msg-receive-box> </div>
     
-      <div class="message-box sent">
-        <p>Yhhh<span>22:40</span></p>
-      </div>
+    <div app-msg-sent-box> </div>
 </div>
