feat(chat): sending and receiving messages done

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
@@ -1,5 +1,8 @@
 <div>
-    <div app-msg-receive-box> </div>
+    @if(isSelected()) {
+        <div app-msg-receive-box> </div>
+        <div app-msg-sent-box> </div>
+
+    }
     
-    <div app-msg-sent-box> </div>
 </div>
