--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
@@ -22,12 +22,9 @@
 </header>
 
 <section class="corpo_conversa">
-  @if (isSelected()) {
-    <div app-chat-body>
-
-
-    </div>
-  }
+  <div [isSelected]="isSelected()" app-chat-body>
+  
+</div>
 </section>
 
 @if (isSelected()) {
