feat(chat): chat recive message emitting done

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
@@ -4,6 +4,6 @@
   <div  [message]="receivedMessage" app-msg-sent-box></div>
 
   } @else {
-  <div app-msg-receive-box></div>
+  <div [message]="receivedMessage" app-msg-receive-box></div>
   } } }
 </div>
