--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/msg-sent-box/msg-sent-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/msg-sent-box/msg-sent-box.component.html
@@ -1,3 +1,3 @@
 <div class="message-box sent">
-    <p> {{ message().text }} <span>{{ message().time | date: 'short' }}</span></p>
+    <p> {{ message().text }} <span>{{ message().time | date: 'hh:mm a' }}</span></p>
   </div>
