feat(chat): user message auto scrolling done

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
@@ -22,7 +22,7 @@
 </header>
 
 <section class="corpo_conversa" #scrollableDiv>
-  <div [isSelected]="isSelected()" app-chat-body>
+  <div (messageTrigger)="scrollChatDiv()" [isSelected]="isSelected()" app-chat-body>
   
 </div>
 </section>
