--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/msg-receive-box/msg-receive-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/msg-receive-box/msg-receive-box.component.html
@@ -1,3 +1,3 @@
 <div class="message-box receive mt-2">
-  <p> {{ message().text }} <span> {{message().time | date: 'hh:mm a'}} </span></p>
+  <p> {{ message().content }} <span> {{message().createdAt | date: 'hh:mm a'}} </span></p>
 </div>
