feat(chat): chat on top scroll div event done

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
@@ -21,7 +21,7 @@
   }
 </header>
 
-<section class="corpo_conversa" #scrollableDiv>
+<section class="corpo_conversa" #scrollableDiv (scroll)="scrollChatDivOnTop($event)">
   <div (messageTrigger)="scrollChatDiv()" [isSelected]="isSelected()" app-chat-body>
   
 </div>
