fix(chat): chat loop track chagne to index

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-body/chat-body.component.html
@@ -9,7 +9,7 @@
       }
     }
     
-    @for (receivedMessage of receivedMessages; track receivedMessage.createdAt) { 
+    @for (receivedMessage of receivedMessages; track $index) { 
       @if (receivedMessage.sender === userId) {
         <div  [message]="receivedMessage" app-msg-sent-box></div>
       } @else {
