--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-input-box/chat-input-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-input-box/chat-input-box.component.html
@@ -2,6 +2,7 @@
     
         <i class="bx bx-smile text-[2rem] cursor-pointer"></i>
         <input
+        autocomplete="off"
         [(ngModel)]="textInput"
         name="text-input"
         type="text" placeholder="Type a message" />
