feat(chat): chat add group modal component done

--- a/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/threedot-dropdown.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/threedot-dropdown.component.html
@@ -10,3 +10,5 @@
 </div>
 
 <app-requests-modal (emitCloseModal)="onToggleRequestModal()" [isModalOpen]="isRequestModalOpen()"></app-requests-modal>
+
+<app-create-group-modal [isModalOpen]="true"></app-create-group-modal>
