feat(chat): chat form func done

--- a/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/create-group-modal/create-group-modal.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/create-group-modal/create-group-modal.component.html
@@ -6,29 +6,57 @@
           <h3 class="text-2xl font-bold text-gray-800">Create New Group</h3>
         </div>
         
-        <form>
+        <form  [formGroup]="groupForm" (ngSubmit)="onSubmit()">
 
         <div class="mb-6">
           <label for="groupTitle" class="block text-sm font-medium text-gray-600 mb-2">Group Name</label>
           <div class="relative">
             <input 
               type="text" 
-              id="groupTitle" 
+              id="groupTitle"
+              formControlName="groupTitle"
               class="w-full px-5 py-4 bg-white border border-gray-300 rounded-xl focus:ring-3 focus:ring-gray-500/30 focus:border-gray-500 outline-none transition-all shadow-sm" 
               placeholder="Enter group name"
             >
         
+          </div>
+          <div>
+            @if (groupForm.get('groupTitle')?.touched && groupForm.get('groupTitle')?.invalid) {
+
+                <div class="text-red-600 text-sm mt-1">
+                    Group name is required.
+                  </div>
+            }
           </div>
         </div>
         
         <div class="mb-8">
           <label for="groupDescription" class="block text-sm font-medium text-gray-600 mb-2">Description</label>
           <textarea 
-            id="groupDescription" 
+            id="groupDescription"
+            formControlName="groupDescription"
             class="w-full px-5 py-4 bg-white border border-gray-300 rounded-xl focus:ring-3 focus:ring-gray-500/30 focus:border-gray-500 outline-none transition-all resize-none shadow-sm" 
             rows="4" 
             placeholder="What's this group about?"
           ></textarea>
+
+          @if (groupForm.get('groupDescription')?.touched && groupForm.get('groupDescription')?.invalid) {
+              <div class="text-red-600 text-sm mt-1">
+                @if (groupForm.get('groupDescription')?.errors?.['required']) {
+                    <div>
+                      Description is required.
+                    </div>
+                }
+                @if (groupForm.get('groupDescription')?.errors?.['minlength']) {
+                    <div>
+                      Description should be at least 10 characters long.
+                    </div>
+
+                }
+              </div>
+
+          }
+
         </div>
         
         <button type="submit" class="w-full bg-gray-800 hover:bg-gray-900 text-white font-semibold py-4 px-6 rounded-xl transition-all shadow-md hover:shadow-lg flex justify-center items-center space-x-2 transform hover:-translate-y-1">
