feat(chat): chat create group backend cal done

--- a/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/create-group-modal/create-group-modal.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/create-group-modal/create-group-modal.component.html
@@ -27,6 +27,12 @@
                     Group name is required.
                   </div>
             }
+
+            @if (serverFormErrorMessage) {
+              <div class="text-red-600 text-sm mt-1">
+                {{ serverFormErrorMessage }}
+              </div>         
+            }
           </div>
         </div>
         
