--- a/src/app/features/chats/pages/chat-home/chat-right-box/top-three-dot/top-three-dot.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/top-three-dot/top-three-dot.component.html
@@ -1,1 +1,31 @@
-<p>top-three-dot works!</p>
+<div
+  class="absolute top-[33px] right-[16px] z-10 mt-2 w-56 origin-top-right rounded-md bg-white ring-1 shadow-lg ring-black/5 focus:outline-hidden"
+  role="menu"
+  aria-orientation="vertical"
+  aria-labelledby="menu-button"
+  tabindex="-1"
+>
+  <div class="py-1" role="none">
+    <a
+      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+      role="menuitem"
+      tabindex="-1"
+      id="menu-item-1"
+      >Add User</a
+    >
+    <a
+      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+      role="menuitem"
+      tabindex="-1"
+      id="menu-item-0"
+      >Account settings</a
+    >
+    <a
+      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+      role="menuitem"
+      tabindex="-1"
+      id="menu-item-1"
+      >Support</a
+    >
+  </div>
+</div>
