--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
@@ -22,7 +22,7 @@
   <ul (click)="toggleThreeDot()" class="opcoes">
     <li><i class="bx bx-dots-vertical-rounded">
       @if (isThreeDotsToggled()) {
-        <app-top-three-dot></app-top-three-dot>
+        <app-top-three-dot [chatType]="selectedConversation.conversation[0].type"></app-top-three-dot>
       }
     </i></li>
   </ul>
