--- a/src/app/features/chats/pages/chat-home/chat-top-header/chat-top-header.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/chat-top-header.component.html
@@ -20,6 +20,7 @@
     </div>
   </li>
   <app-search-user-modal
+    [forGroup]="false"
     (onCloseModal)="onToggleSearchModal()"
     [showModal]="showSearchModal()"
   ></app-search-user-modal>
