--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
@@ -60,9 +60,9 @@
         } @else {
 
           @if (forGroup()) {
-
+            <app-add-user-group-button (onCloseModal)="detachModal()" [userId]="selectedUser?._id || ''"></app-add-user-group-button>
           } @else {
-            <app-open-chat-button (onCloseModal)="detachModal()" [userId]="selectedUser?._id || ''"></app-open-chat-button>
+            <app-open-chat-button (onCloseModal)="detachModal()" [userId]="selectedUser?._id || ''"></app-open-chat-button>                                                                                           
           }
 
         }
