fix(chat): images added temporary

--- a/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-right-box/chat-right-box.component.html
@@ -3,7 +3,7 @@
   <div class="avatar">
     <div class="avatarusuario">
       <img
-        src="https://media.istockphoto.com/id/1300972574/photo/millennial-male-team-leader-organize-virtual-workshop-with-employees-online.jpg?s=2048x2048&w=is&k=20&c=tU5X1sJJ9sIcqthiw5RO388RhKNllo0ZF82LPitfXgU="
+        src="https://static.vecteezy.com/system/resources/previews/036/280/651/large_2x/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-illustration-vector.jpg"
         class="usuario"
       />
     </div>
