--- a/src/app/features/chats/pages/chat-home/chat-top-header/chat-top-header.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/chat-top-header.component.html
@@ -1,7 +1,7 @@
 <div class="avatarusuario">
   <img
-    src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
-    class="usuario"
+  src="https://static.vecteezy.com/system/resources/previews/036/280/651/large_2x/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-illustration-vector.jpg"  
+  class="usuario"
   />
 </div>
 <ul class="opcoes items-center justify-center gap-3">
